2005-07-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/export_library.rb:

	Removed a duplicated 'EOS' statement introduced in the previous commit.

2005-07-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/TableView.rb:

	- Added some contextual popup menus in both libraries and books views ;
	- Disable the export menu item if the selected library is empty.

	* lib/alexandria/book_providers.rb,
	  lib/alexandria/macui/AddBookController.rb,
	  lib/alexandria/macui/BooksDataSource.rb,
	  lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/PreferencesController.rb,
	  lib/alexandria/macui/TableView.rb,
	  lib/alexandria/macui/MainWindow.nib/classes.nib,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	- Fixed some bugs in the Add Book window ;
	- Fixed a bug related to the empty selection of table views ;
	- Added 'View/Online Information At' menu ;
	- Added books table view column sorting ;
	- Added books matrix sorting (via 'View/Arrange Icons By' menu).

2005-06-30  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/mcu.rb,
	  lib/alexandria/book_providers/proxis.rb:

	Use our new String#convert API instead of GLib.convert.

	* alexandria.xcode/project.pbxproj,
	  lib/alexandria/preferences.rb,
	  lib/alexandria/macui/Info.plist,
	  lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/PreferencesController.rb,
	  lib/alexandria/macui/MainWindow.nib/info.nib:

	Introduced preferences persistence.

2005-06-29  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb:

	Make sure the text input from the search toolbar item is converted
	to UTF8.

2005-06-28  Owain Evans  <o.evans@gmail.com>

	* lib/alexandria/ui/new_book_dialog.rb:

	Make the new book dialog accept upc barcodes from the clipboard. 
 